# desafio-igeos

./: README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  pyproject.toml
backend/app/: deps.py  main.py  models.py  schemas.py
backend/app/core/: config.py  database.py  security.py
backend/app/crud/: energy_statement_crud.py  marginal_costs_crud.py  subsystem_crud.py
backend/app/exceptions/: auth.py  database.py  query.py
backend/app/routes/: auth.py  costs.py  energy_statements.py  marginal_costs.py  production_statements.py  subsystems.py
backend/migrations/: env.py
backend/migrations/versions/: 26f388924d06_making_valor_carga_and_valor_.py  968ffecb59af_add_subsystem_marginal_cost_production_.py
backend/scripts/: docker-entrypoint.sh  load_tables.py
frontend/: Dockerfile  README.md  package.json
frontend/app/: app.css  root.tsx  routes.ts  types.ts
frontend/app/components/: circular-progress.tsx  header.tsx  login-button.tsx  logout-button.tsx  mode-toggle.tsx  theme-provider.tsx
frontend/app/components/ui/: calendar.tsx  pagination.tsx
frontend/app/hooks/: use-cost-data.ts  use-energy-data.ts
frontend/app/pages/: energy-production.tsx  home.tsx  marginal-costs.tsx
frontend/app/routes/: energy-production.tsx  home.tsx  marginal-costs.tsx
