[project]
name = "desafio-igeos"
version = "0.1.0"
description = "API for dashboards about operation costs on the Sistema Interligado Nacional (SIN) organization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "google-cloud-bigquery>=3.30.0",
    "pydantic-settings>=2.8.1",
]
